added ready krabby patty page

--- a/krabby_patty.html
+++ b/krabby_patty.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1><u>krabby Patty</u></h1>
+    <h2>Description</h2>
+    <p>
+      krabby patty is invented by mr.krab under water , mr.krab killed his own kin to make this krabby and delicious patty ,he killed his own son and daughter and experimented for half his life to make this finger licking Recipe.
+    </p>
+    <img
+      src="/images/spongebob-krabby-patty.gif"
+      alt="krabby patty"
+      height="400"
+    />
+    <h2>ingredient</h2>
+    <ul>
+        <li>bun</li>
+        <li>krab</li>
+        <li>mustard sauce</li>
+        <li>tomato kitchup</li>
+        <li>cabbage</li>
+        <li>submarine</li>
+        <li>ocean</li>
+        <li>greed for money</li>
+        <li>sponge</li>
+    </ul>
+    <h2>steps-</h2>
+    <ol type="I">
+        <li>buy submarine</li>
+        <li>go under water</li>
+        <li>hire a sponge for 1$ per day </li>
+        <li>let him make it</li>
+        <li>and sell it</li>
+        <li>I mean eat it haha.</li>
+    </ol>
     
-</body>
+    <button><b>Back</b></button>
+
+  </body>
 </html>
