added ready powerpuff girls page

--- a/spinach.html
+++ b/spinach.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Spinach</title>
   </head>
   <body>
-    <h1><u>spinach Popeye</u></h1>
+    <h1><u>Spinach Popeye</u></h1>
     <h2>Description</h2>
     <p>
       Eat your damn spinach and become <strong>Stronger</strong> than ever--
     </p>
     <img
       src="/images/popeye-sailor.gif"
-      alt="popaye eating spinach"
+      alt="popeye eating spinach"
       height="400"
     />
     <h2>ingredient</h2>
