fixing image not showing on github

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </h2>
     <br>
     <ul>
-      <li><a href="/powerpuff_girls.html">Recipe of chemical PowerPuff</a></li>
-      <li><a href="/spinach.html">Spinach of Popaye</a></li>
-      <li><a href="/krabby_patty.html">Krabby Patty</a></li>
+      <li><a href="./powerpuff_girls.html">Recipe of chemical PowerPuff</a></li>
+      <li><a href="./spinach.html">Spinach of Popaye</a></li>
+      <li><a href="./krabby_patty.html">Krabby Patty</a></li>
     </ul>
   </body>
 </html>
