fixed link not working and image not loading

--- a/krabby_patty.html
+++ b/krabby_patty.html
@@ -13,7 +13,7 @@
       krabby patty is invented by mr.krab under water , mr.krab killed his own kin to make this krabby and delicious patty ,he killed his own son and daughter and experimented for half his life to make this finger licking Recipe.
     </p>
     <img
-      src="/images/spongebob-krabby-patty.gif"
+      src="./images/spongebob-krabby-patty.gif"
       alt="krabby patty"
       height="400"
     />
@@ -39,7 +39,7 @@
         <li>I mean eat it haha.</li>
     </ol>
     
-    <button><b>Back</b></button>
+    <a href="./index.html"> <button><b>Back</b></button></a>
 
   </body>
 </html>
