--- a/spinach.html
+++ b/spinach.html
@@ -13,7 +13,7 @@
       Eat your damn spinach and become <strong>Stronger</strong> than ever--
     </p>
     <img
-      src="/images/popeye-sailor.gif"
+      src="./images/popeye-sailor.gif"
       alt="popeye eating spinach"
       height="400"
     />
@@ -23,7 +23,7 @@
     </ul>
     <h2>Recipe!</h2>
     <p>Just Draw it and Eat it</p>
-    <button><b>Back</b></button>
+    <a href="./index.html"> <button><b>Back</b></button></a>
 
 </body>
 </html>
