--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1><U>---Bizzare-recipias---</U></h1>
       
       <hr>
-    <img src="/images/qXh8DC.gif" alt="chemical x" height="500" />
+    <img src="./images/qXh8DC.gif" alt="chemical x" height="500" />
     <h2>
       <i><u>Conqueror-de-recepias--></u></i>
     </h2>
